--- a/src/app/components/sidebars/sidebar-menu/sidebar.component.html
+++ b/src/app/components/sidebars/sidebar-menu/sidebar.component.html
@@ -5,8 +5,8 @@
         <div class="user-pic">
           <img
             [ngClass]="{
-              'time-state-open': currentTimeControl()?.timeState === timeStates.open,
-              'time-state-close': currentTimeControl()?.timeState === timeStates.close
+              'time-state-open': currentTimeControl()?.timeState === timeStates.Open,
+              'time-state-close': currentTimeControl()?.timeState === timeStates.Close
             }"
             alt="User avatar"
             class="img-responsive img-rounded"
