--- a/src/app/pages/accounts/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/pages/accounts/recovery-password-change/recovery-password-change.component.html
@@ -17,7 +17,7 @@
             [badRequest]="badRequest"
             [form]="form"
             [submitted]="submitted"
-            [inputType]="formInputTypes.password"
+            [inputType]="formInputTypes.Password"
             fieldName="password"
             formControlName="password"
             label="Contraseña" />
@@ -30,7 +30,7 @@
             [badRequest]="badRequest"
             [form]="form"
             [submitted]="submitted"
-            [inputType]="formInputTypes.password"
+            [inputType]="formInputTypes.Password"
             fieldName="confirmPassword"
             formControlName="confirmPassword"
             label="Contraseña" />
