--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -28,7 +28,7 @@
           <aw-form-floating
             [badRequest]="badRequest"
             [form]="form"
-            [inputType]="formTypes.password"
+            [inputType]="formTypes.Password"
             [submitted]="submitted"
             fieldName="password"
             formControlName="password"
