--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -4,9 +4,9 @@
   <aw-card>
     <div class="d-flex">
       <div class="me-auto">
-        <aw-dot [color]="calendarColors.today">&nbsp;</aw-dot> Día actual
-        <aw-dot [color]="calendarColors.notWorkingDay">&nbsp;</aw-dot> Día no laborable
-        <aw-dot [color]="calendarColors.holiday">&nbsp;</aw-dot> Día festivo
+        <aw-dot [color]="calendarColors.Today">&nbsp;</aw-dot> Día actual
+        <aw-dot [color]="calendarColors.NotWorkingDay">&nbsp;</aw-dot> Día no laborable
+        <aw-dot [color]="calendarColors.Holiday">&nbsp;</aw-dot> Día festivo
         <span class="ms-3">
           <span awTooltip title="Tiempos de vacaciones de empleados no calculados">
             <span class="fa-solid fa-circle-info small text-info"></span>
