--- a/src/app/pages/company-settings/company-settings-update/company-settings-update.component.html
+++ b/src/app/pages/company-settings/company-settings-update/company-settings-update.component.html
@@ -9,7 +9,7 @@
           [badRequest]="badRequest"
           [form]="form"
           [submitted]="submitted"
-          [inputType]="formInputTypes.integer"
+          [inputType]="formInputTypes.Integer"
           fieldName="periodTimeControlMax"
           formControlName="periodTimeControlMax"
           label="Periodo máx de un control de tiempo" />
@@ -25,7 +25,7 @@
             [badRequest]="badRequest"
             [form]="form"
             [submitted]="submitted"
-            [inputType]="formInputTypes.integer"
+            [inputType]="formInputTypes.Integer"
             fieldName="weeklyWorkingHours"
             formControlName="weeklyWorkingHours"
             label="Horas de trabajo semanal" />
