--- a/src/app/pages/employees/employee-invite/employee-invite.component.html
+++ b/src/app/pages/employees/employee-invite/employee-invite.component.html
@@ -35,7 +35,7 @@
         <aw-form-input
           [badRequest]="badRequest"
           [form]="form"
-          [inputType]="formInputTypes.email"
+          [inputType]="formInputTypes.Email"
           [submitted]="submitted"
           fieldName="email"
           formControlName="email"
