--- a/src/app/pages/employees/employee-update/employee-update.component.html
+++ b/src/app/pages/employees/employee-update/employee-update.component.html
@@ -33,7 +33,7 @@
           <aw-form-input
             [badRequest]="badRequest"
             [form]="form"
-            [inputType]="formTypes.email"
+            [inputType]="formTypes.Email"
             [submitted]="submitted"
             fieldName="email"
             formControlName="email"
