--- a/src/app/pages/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/pages/accounts/recovery-password/recovery-password.component.html
@@ -19,7 +19,7 @@
             <aw-form-floating
               [badRequest]="badRequest"
               [form]="form"
-              [inputType]="formInputTypes.email"
+              [inputType]="formInputTypes.Email"
               [submitted]="submitted"
               fieldName="email"
               formControlName="email"
