--- a/src/app/components/tables/table-header/table-header.component.html
+++ b/src/app/components/tables/table-header/table-header.component.html
@@ -17,17 +17,17 @@
       @if (header.sortable) {
         <div (click)="handleClickOrder(header)" class="cursor-pointer ml-auto">
           <!-- sort order -->
-          @if (header.orderType !== orderTypes.none) {
+          @if (header.orderType !== orderTypes.None) {
             <span class="badge mr-2 opacity3">
               {{ getOrderPrecedence(header) }}
             </span>
             <span
-              [ngClass]="{ 'fa-rotate-180': header.orderType === orderTypes.ascending }"
+              [ngClass]="{ 'fa-rotate-180': header.orderType === orderTypes.Ascending }"
               class="fas fa-angle-down arrow opacity3">
             </span>
           }
 
-          @if (header.orderType === orderTypes.none) {
+          @if (header.orderType === orderTypes.None) {
             <span class="ml-auto opacity3">&nbsp;<span class="icon fas fa-arrows-alt-v"></span></span>
           }
           <!-- end sort order -->
