--- a/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
+++ b/src/app/pages/time-control-records/time-control-record-details/time-control-record-details.component.html
@@ -6,7 +6,7 @@
       <mat-card-content>
         <h3>Incidencia</h3>
 
-        <div class="alert alert-warning">
+        <div class="alert alert-warning nl2br">
           {{ timeControl?.incidenceDescription }}
         </div>
         <button mat-flat-button color="primary" class="mt-2" (click)="handleCloseIncidence()">
@@ -137,7 +137,7 @@
         <div class="mt-2"></div>
         <h3>Incidencia cerrada</h3>
 
-        <div class="alert alert-success">
+        <div class="alert alert-success nl2br">
           {{ timeControl?.incidenceDescription }}
         </div>
       </mat-card-content>
