--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -136,7 +136,7 @@
             <td mat-cell *matCellDef="let row">
               @if (row.incidence) {
                 <span [matTooltip]="row.incidenceDescription" class="text-danger">
-                  <mat-icon>exclamation</mat-icon>
+                  <mat-icon>priority_high</mat-icon>
                 </span>
               } @else {
                 <span>&nbsp;</span>
