--- a/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.scss
+++ b/src/app/components/year-calendar-view/month-calendar-view/month-calendar-view.component.scss
@@ -27,7 +27,7 @@
 /** Día marcado festivo de empresa. */
 ::ng-deep .company-holiday {
   background-color: #75af77 !important;
-  border-radius: 20px !important;
+  border-radius: 100% !important;
 
   .mat-calendar-body-cell-content {
     color: white !important;
