--- a/src/app/pages/times-control-progress/time-control-incidence-create/time-control-incidence-create.component.html
+++ b/src/app/pages/times-control-progress/time-control-incidence-create/time-control-incidence-create.component.html
@@ -1,4 +1,4 @@
-<div class="tieme-control-incidence-dialog">
+<div>
   <h2 mat-dialog-title>Crear incidencia</h2>
   <mat-dialog-content>
     <form [formGroup]="form">
