--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,10 @@ $aw-color-success: #66bb6a;
 $aw-color-info: #64b5f6;
 $aw-color-warning: #ffcc80;
 $aw-color-danger: #e57373;
+
+/**
+ * Calendar day colors.
+ */
+$aw-not-working-day: #581845;
+$aw-company-holiday: #75af77;
+$aw-employee-holiday: #75af77;
