--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -1,6 +1,41 @@
 <aw-page-base>
   <aw-page-header>Gestionar días de vacaciones</aw-page-header>
 
+  <!-- toolbar -->
+  <mat-card>
+    <mat-card-content>
+      <div class="d-flex flex-row flex-wrap align-items-center">
+        <aw-year-selector
+          (changeYearSelected)="handleYearSelectorChange($event)"
+          [dateSelected]="yearSelected"
+          [readOnly]="true" />
+
+        <div class="d-flex flex-column ms-auto">
+          <h1>Calendario laboral {{ yearSelected.year }}</h1>
+
+          <div class="d-flex justify-content-center">
+            @if (!loading) {
+              Horas trabajadas: <span class="text-success">{{ workingHoursYear }}</span>
+              <mat-icon color="primary" matTooltip="No aplica días festivos de empleados">info</mat-icon>
+            } @else {
+              <div class="d-flex justify-content-center">
+                <mat-progress-spinner color="primary" mode="indeterminate" [diameter]="50" />
+              </div>
+            }
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-center ms-auto legend">
+          <div><span class="legend-item non-working-day mx-2">&nbsp;</span> Día no laborable</div>
+          <div><span class="legend-item company-holiday mx-2">&nbsp;</span> Día festivo</div>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <div class="mt-2"></div>
+
+  <!-- calendar -->
   <aw-year-calendar-view
     (selectedChange)="handleSelectChange($event)"
     [yearSelected]="yearSelected.year"
