--- a/src/app/pages/company-holidays-manage/company-holiday-update/company-holiday-update.component.html
+++ b/src/app/pages/company-holidays-manage/company-holiday-update/company-holiday-update.component.html
@@ -30,7 +30,13 @@
   <mat-dialog-actions>
     <div>
       <button mat-flat-button mat-dialog-close color="accent" class="me-2"><mat-icon>close</mat-icon> Cerrar</button>
-      <aw-btn-loading [loading]="loadingForm" icon="save" btnText="Añadir festivo" (eventClick)="handleSubmit()" />
+      <aw-btn-loading
+        [loading]="loadingForm"
+        icon="save"
+        btnText="Añadir festivo"
+        class="me-2"
+        (eventClick)="handleSubmit()" />
+      <button mat-flat-button color="warn" (click)="handleDelete()"><mat-icon>delete</mat-icon> Eliminar</button>
     </div>
   </mat-dialog-actions>
 </div>
