--- a/src/app/pages/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/pages/accounts/recovery-password/recovery-password.component.html
@@ -24,15 +24,15 @@
             [submitted]="submitted"
             fieldName="email"
             formControlName="email"
-            label="Correo electrónico"
-            icon="mail" />
+            icon="mail"
+            label="Correo electrónico" />
 
           <mat-divider />
         </mat-card-content>
 
         <mat-card-footer class="mt-2">
           <aw-btn-loading [loading]="loading" btnText="Recuperar contraseña" />
-          <button mat-button type="button" class="ms-2" [routerLink]="[siteUrl.auth.login]">Identificarse</button>
+          <button [routerLink]="[siteUrl.auth.login]" class="ms-2" mat-button type="button">Identificarse</button>
         </mat-card-footer>
       </mat-card>
     </form>
