--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -38,7 +38,7 @@
   <!-- calendar -->
   <aw-year-calendar-view
     (selectedChange)="handleSelectChange($event)"
-    [yearSelected]="yearSelected.year"
     [calendarEvents]="calendarEvents"
-    [loading]="loading" />
+    [loading]="loading"
+    [yearSelected]="yearSelected.year" />
 </aw-page-base>
