--- a/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
@@ -4,8 +4,9 @@
   <mat-card>
     <mat-card-content>
       <!-- toolbar-->
-      <button mat-button color="primary" [routerLink]="[siteUrl.companySettings.update]">
-        <mat-icon>edit</mat-icon> Editar
+      <button [routerLink]="[siteUrl.companySettings.update]" color="primary" mat-button>
+        <mat-icon>edit</mat-icon>
+        Editar
       </button>
 
       @if (!loadingCompanySettings()) {
