--- a/src/app/pages/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/pages/company-tasks/company-task-create/company-task-create.component.html
@@ -54,7 +54,7 @@
 
         <!-- buttons-->
         <aw-btn-back class="me-2" />
-        <aw-btn-loading [loading]="loading" icon="add" btnText="Crear" />
+        <aw-btn-loading [loading]="loading" btnText="Crear" icon="add" />
       </form>
     </mat-card-content>
   </mat-card>
