--- a/src/app/pages/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
+++ b/src/app/pages/employees/employee-settings/employee-settings-details/employee-settings-details.component.html
@@ -4,8 +4,9 @@
   <mat-card>
     <mat-card-content>
       <!-- toolbar -->
-      <button mat-button color="primary" [routerLink]="[siteUrl.employees.settingsUpdate]">
-        <mat-icon>edit</mat-icon> Editar
+      <button [routerLink]="[siteUrl.employees.settingsUpdate]" color="primary" mat-button>
+        <mat-icon>edit</mat-icon>
+        Editar
       </button>
 
       <!-- table -->
