--- a/src/app/pages/employees/employee-settings/employee-settings-update/employee-settings-update.component.html
+++ b/src/app/pages/employees/employee-settings/employee-settings-update/employee-settings-update.component.html
@@ -33,7 +33,7 @@
         <!-- buttons-->
         <div class="mt-2">
           <aw-btn-back class="me-2" />
-          <aw-btn-loading [loading]="loadingForm" icon="save" btnText="Actualizar" />
+          <aw-btn-loading [loading]="loadingForm" btnText="Actualizar" icon="save" />
         </div>
       </form>
     </mat-card-content>
