--- a/src/app/pages/employees/employee-view/employee-details/employee-details.component.html
+++ b/src/app/pages/employees/employee-view/employee-details/employee-details.component.html
@@ -129,7 +129,8 @@
     <!-- edit button -->
     @if (canUpdateStates) {
       <button mat-flat-button color="primary" class="ms-2" [routerLink]="urlToEdit">
-        <mat-icon>edit</mat-icon> Editar
+        <mat-icon>edit</mat-icon>
+        Editar
       </button>
     }
   </mat-card-content>
