--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -6,12 +6,13 @@
       <!-- toolbar -->
       <div class="d-flex justify-content-between mb-2">
         <!-- button add time -->
-        <button mat-button color="primary" [routerLink]="siteUrl.timeControlRecords.create">
-          <mat-icon>add</mat-icon> Añadir tiempo
+        <button [routerLink]="siteUrl.timeControlRecords.create" color="primary" mat-button>
+          <mat-icon>add</mat-icon>
+          Añadir tiempo
         </button>
 
         <div>
-          <mat-button-toggle-group name="customFilter" aria-label="Filtros">
+          <mat-button-toggle-group aria-label="Filtros" name="customFilter">
             <!-- filter open times -->
             <mat-button-toggle (change)="handleCustomFilters('open-times')" [checked]="filterOpenTimes">
               Tiempos abiertos
@@ -28,10 +29,10 @@
           <!-- date range filter -->
           <aw-date-range-selector
             (dateChange)="handleDateChange($event)"
-            [rangeValue]="filterPeriod"
-            [disabled]="!filterDateRangeState" />
+            [disabled]="!filterDateRangeState"
+            [rangeValue]="filterPeriod" />
 
-          <button mat-button [color]="filterDateRangeState ? 'warn' : 'primary'" (click)="handleToggleFilterDate()">
+          <button (click)="handleToggleFilterDate()" [color]="filterDateRangeState ? 'warn' : 'primary'" mat-button>
             <mat-icon>event_available</mat-icon>
           </button>
         </div>
