--- a/src/app/pages/times-control-progress/time-control-incidence-create/time-control-incidence-create.component.html
+++ b/src/app/pages/times-control-progress/time-control-incidence-create/time-control-incidence-create.component.html
@@ -33,13 +33,16 @@
 
   <mat-dialog-actions>
     <div class="mt-2">
-      <button mat-flat-button mat-dialog-close color="accent" class="me-2"><mat-icon>close</mat-icon> Cerrar</button>
+      <button class="me-2" color="accent" mat-dialog-close mat-flat-button>
+        <mat-icon>close</mat-icon>
+        Cerrar
+      </button>
       <aw-btn-loading
-        [loading]="loadingForm"
-        icon="save"
-        btnText="Crear incidencia"
         (eventClick)="handleSubmit()"
-        [disabled]="disabled" />
+        [disabled]="disabled"
+        [loading]="loadingForm"
+        btnText="Crear incidencia"
+        icon="save" />
     </div>
   </mat-dialog-actions>
 </div>
