--- a/src/app/pages/company-tasks/company-task-view/company-task-details/company-task-details.component.html
+++ b/src/app/pages/company-tasks/company-task-view/company-task-details/company-task-details.component.html
@@ -41,8 +41,9 @@
     <div class="mt-2">
       <aw-btn-back class="me-2" />
 
-      <button mat-flat-button color="primary" class="me-2" [routerLink]="urlToEdit">
-        <mat-icon>edit</mat-icon> Editar
+      <button [routerLink]="urlToEdit" class="me-2" color="primary" mat-flat-button>
+        <mat-icon>edit</mat-icon>
+        Editar
       </button>
 
       @if (companyTaskSelected()?.active) {
