--- a/src/app/pages/employees/employee-invite/employee-invite.component.html
+++ b/src/app/pages/employees/employee-invite/employee-invite.component.html
@@ -33,8 +33,8 @@
         <div class="mb-2">
           <aw-form-input
             [badRequest]="badRequest"
-            [form]="form"
             [formInputType]="formInputType.Email"
+            [form]="form"
             [submitted]="submitted"
             fieldName="email"
             formControlName="email"
@@ -55,7 +55,7 @@
         <!-- buttons-->
         <aw-btn-back class="me-2" />
 
-        <aw-btn-loading icon="add" btnText="Invitar" [loading]="loading" />
+        <aw-btn-loading [loading]="loading" btnText="Invitar" icon="add" />
       </form>
     </mat-card-content>
   </mat-card>
