--- a/src/app/pages/company-calendar/company-holiday-create/company-holiday-create.component.html
+++ b/src/app/pages/company-calendar/company-holiday-create/company-holiday-create.component.html
@@ -30,7 +30,7 @@
   <mat-dialog-actions>
     <div>
       <button mat-flat-button mat-dialog-close color="accent" class="me-2"><mat-icon>close</mat-icon> Cerrar</button>
-      <aw-btn-loading [loading]="loadingForm" icon="save" btnText="Añadir festivo" (eventClick)="handleSubmit()" />
+      <aw-btn-loading [loading]="loadingForm" icon="save" btnText="Añadir" (eventClick)="handleSubmit()" />
     </div>
   </mat-dialog-actions>
 </div>
