--- a/src/app/pages/company-calendar/company-holiday-update/company-holiday-update.component.html
+++ b/src/app/pages/company-calendar/company-holiday-update/company-holiday-update.component.html
@@ -36,7 +36,7 @@
       <aw-btn-loading
         (eventClick)="handleSubmit()"
         [loading]="loadingForm"
-        btnText="Añadir festivo"
+        btnText="Actualizar"
         class="me-2"
         icon="save" />
       <button (click)="handleDelete()" color="warn" mat-flat-button>
