Creado component manage-holidays

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -76,6 +76,8 @@
 
   <!-- page content -->
   <mat-sidenav-content class="sidenav-content">
-    <ng-content />
+    <div class="mb-5">
+      <ng-content />
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
